[package]
name = "shared"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
cipher = "0.4.2"
common = { path = "../common" }
config = "0.12.0"
crosscom = { path = "../../crosscom/runtime/rust" }
dashmap = "5.1.0"
dyn-clone = "1.0.1"
encoding = "0.2.33"
fileformats = { path = "../fileformats" }
image = "0.23.0"
imgui = { version = "0.10", features = ["docking"] }
itertools = "0"
lazy_static = "1.2.0"
lua50-32-sys = { git = "https://github.com/dontpanic92/lua50-32-sys" }
log = { version = "0.4.13" }
lzma-rs = "0.3.0"
md5 = "0.7"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
minilzo-rs = { git = "https://github.com/dontpanic92/minilzo-rs/" }
miniz_oxide ="0.6"
rand = "0.8.3"
radiance = { path = "../../radiance/radiance" }
regex = "1.4.5"
roxmltree = "0.18.0"
rust-ini = "0.16.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tomcrypt-sys = "0.1"
uuid = "0.8"
wavefront_obj = "5.1.0"
xtea = { git = "https://github.com/Brekcel/xtea" }
xxtea = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0"

[target.'cfg(target_os = "vita")'.dependencies]
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg", features = ["static"] }

[target.'cfg(not(target_os = "vita"))'.dependencies]
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg" }
interprocess = "1.2"
memmap = "0.7.0"
dirs = "3.0.1"

[build-dependencies]
cfg_aliases = "0.1.0"
