[package]
name = "yaobow"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"
build = "build.rs"
default-run = "yaobow"

[[bin]]
name = "yaobow"
path = "src/main.rs"

[lib]
name = "yaobow"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
common = { path = "../common" }
crosscom = { path = "../../crosscom/runtime/rust" }
imgui = { version = "0.10", features = ["docking"] }
shared = { path = "../shared" }
fileformats = { path = "../fileformats" }
radiance = { path = "../../radiance/radiance" }
simple_logger = "4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = "0.8"

[dependencies.log]
version = "0.4.14"
features = ["max_level_debug", "release_max_level_debug"]

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.5.0"
ndk-sys = "0.3.0"
ndk-glue = "0.5.0"

[package.metadata.android]
build_targets = [ "aarch64-linux-android" ]
apk_name = "Yaobow"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application.activity]
config_changes = "orientation"
launch_mode = "singleTop"
orientation = "portrait"
