[package]
name = "yaobow"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2021"
default-run = "yaobow"

[[bin]]
name = "yaobow"
path = "src/main.rs"

[lib]
name = "yaobow"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
common = { path = "../common" }
crosscom = { path = "../../crosscom/runtime/rust" }
imgui = { version = "0.10", features = ["docking"] }
shared = { path = "../shared" }
fileformats = { path = "../fileformats" }
image = "0.23.0"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
radiance = { path = "../../radiance/radiance" }
rand = "0.8.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = "0.8"

[dependencies.log]
version = "0.4.14"
features = ["max_level_warn", "release_max_level_warn"]

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.5.0"
ndk-sys = "0.3.0"
ndk-glue = "0.5.0"

[target.'cfg(not(target_os = "vita"))'.dependencies]
simple_logger = "4"

[target.'cfg(target_os = "vita")'.dependencies]
simplelog = { version = "0.12", default-features = false}


[package.metadata.android]
build_targets = [ "aarch64-linux-android" ]
apk_name = "Yaobow"

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application.activity]
config_changes = "orientation"
launch_mode = "singleTop"
orientation = "portrait"

[build-dependencies]
cfg_aliases = "0.1.0"
vergen = { version = "8.0.0", features = [ "build", "git", "gitcl" ]}
