[package]
name = "yaobow_editor"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardet = "0.2.4"
common = { path = "../common" }
opengb = { path = "../opengb" }
radiance = { path = "../../radiance/radiance" }
radiance_editor = { path = "../../radiance/radiance_editor" }
image = "0.23.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs/", features = ["docking"] }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
serde = "1.0.106"
serde_json = "1.0.61"
encoding = "0.2.33"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
simple_logger = "1.16.0"
wavefront_obj = "5.1.0"
native-dialog = "0.6.3"
lazy_static = "1.2.0"
uuid = "0.8"
crosscom = { path = "../../crosscom/runtime/rust" }
xxtea = "0.2.0"


[features]
ffmpeg = ["opengb/ffmpeg"]
