[package]
name = "yaobow_editor"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
chardet = "0.2.4"
common = { path = "../common" }
crosscom = { path = "../../crosscom/runtime/rust" }
encoding = "0.2.33"
fileformats = { path = "../fileformats" }
image = "0.23.0"
imgui = { git = "https://github.com/imgui-rs/imgui-rs/", features = ["docking"] }
lazy_static = "1.2.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
native-dialog = "0.6.3"
opengb = { path = "../opengb" }
radiance = { path = "../../radiance/radiance" }
radiance_editor = { path = "../../radiance/radiance_editor" }
serde = "1.0.106"
serde_json = "1.0.61"
simple_logger = "1.16.0"
shared = { path = "../shared" }
uuid = "0.8"
wavefront_obj = "5.1.0"
xxtea = "0.2.0"


[features]
ffmpeg = ["opengb/ffmpeg"]
