[package]
name = "yaobow_editor_p7"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
p7 = { path = "../../radiance/p7lang/p7" }
radiance = { path = "../../radiance/radiance" }
simple_logger = "4"
